--- a/sources/webapp/composer.json
+++ b/sources/webapp/composer.json
@@ -8,29 +8,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1.0",
+        "php": "^8.2.0",
         "caseyamcl/toc": "^3.1",
+        "cweagans/composer-patches": "^1.7",
         "gotenberg/gotenberg-php": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "jacksleight/statamic-bard-texstyle": "^3.0",
         "jfcherng/php-diff": "^6.12",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.7",
-        "mitydigital/feedamic": "^2.2",
-        "mitydigital/sitemapamic": "^2.3",
+        "mitydigital/feedamic": "^2.4",
+        "mitydigital/sitemapamic": "^3.1",
         "pragmarx/yaml": "^1.3",
-        "statamic/cms": "^4.0",
+        "statamic/cms": "^5.0",
         "textandbytes/converter": "*",
         "textandbytes/footnotes": "*",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "pontedilana/php-weasyprint": "1.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.16.3",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0"
     },
@@ -68,6 +70,11 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "patches": {
+            "phpoffice/phpword": {
+                "Fix footnote separator (PR 2635)": "patches/phpword-2635.diff"
+            }
         }
     },
     "config": {
@@ -76,7 +83,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pixelfear/composer-dist-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "cweagans/composer-patches": true
         }
     },
     "minimum-stability": "dev",
