--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ sources/webapp/npm-debug.log
 sources/webapp/yarn-error.log
 sources/webapp/app/storage/
 sources/webapp/public/css/app.css
+sources/webapp/public/css/print.css
 sources/webapp/public/js/app.js
 sources/webapp/public/js/manifest.js
 sources/webapp/public/js/vendor.js
