Fix site permissions

--- a/sources/webapp/resources/users/roles.yaml
+++ b/sources/webapp/resources/users/roles.yaml
@@ -2,12 +2,22 @@ admin:
   title: Administrator
   permissions:
     - 'access cp'
+    - 'access en site'
+    - 'access de site'
+    - 'access fr site'
+    - 'access it site'
     - 'view pages entries'
     - 'edit pages entries'
     - 'publish pages entries'
     - 'reorder pages entries'
     - 'edit other authors pages entries'
     - 'publish other authors pages entries'
+    - 'view commentaries entries'
+    - 'edit commentaries entries'
+    - 'create commentaries entries'
+    - 'delete commentaries entries'
+    - 'publish commentaries entries'
+    - 'reorder commentaries entries'
     - 'view legal_domains entries'
     - 'edit legal_domains entries'
     - 'create legal_domains entries'
@@ -17,12 +27,6 @@ admin:
     - 'edit other authors legal_domains entries'
     - 'publish other authors legal_domains entries'
     - 'delete other authors legal_domains entries'
-    - 'view commentaries entries'
-    - 'edit commentaries entries'
-    - 'create commentaries entries'
-    - 'delete commentaries entries'
-    - 'publish commentaries entries'
-    - 'reorder commentaries entries'
     - 'view avatars assets'
     - 'upload avatars assets'
     - 'edit avatars assets'
@@ -43,5 +47,9 @@ contributor:
   title: Contributor
   permissions:
     - 'access cp'
+    - 'access en site'
+    - 'access de site'
+    - 'access fr site'
+    - 'access it site'
     - 'view commentaries entries'
     - 'edit commentaries entries'
