--- a/sources/webapp/composer.json
+++ b/sources/webapp/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2.0",
+        "algolia/algoliasearch-client-php": "^3.2",
         "caseyamcl/toc": "^3.1",
         "cweagans/composer-patches": "^1.7",
         "gotenberg/gotenberg-php": "^1.1",
@@ -20,12 +21,12 @@
         "laravel/tinker": "^2.7",
         "mitydigital/feedamic": "^2.4",
         "mitydigital/sitemapamic": "^3.1",
+        "pontedilana/php-weasyprint": "1.4.0",
         "pragmarx/yaml": "^1.3",
         "statamic/cms": "^5.0",
         "textandbytes/converter": "*",
         "textandbytes/footnotes": "*",
-        "tightenco/ziggy": "^1.0",
-        "pontedilana/php-weasyprint": "1.4.0"
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
@@ -72,9 +73,6 @@
             "dont-discover": []
         },
         "patches": {
-            "phpoffice/phpword": {
-                "Fix footnote separator (PR 2635)": "patches/phpword-2635.diff"
-            }
         }
     },
     "config": {
