Fix legislative act title localization

--- a/sources/webapp/resources/blueprints/collections/commentaries/legal_domain.yaml
+++ b/sources/webapp/resources/blueprints/collections/commentaries/legal_domain.yaml
@@ -10,7 +10,7 @@ tabs:
             field:
               type: text
               required: true
-              localizable: false
+              localizable: true
               validate:
                 - required
   sidebar:
