--- a/sources/webapp/composer.json
+++ b/sources/webapp/composer.json
@@ -35,7 +35,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "statamic/importer": "^1.8"
     },
     "autoload": {
         "psr-4": {
