--- a/sources/webapp/resources/users/roles.yaml
+++ b/sources/webapp/resources/users/roles.yaml
@@ -39,6 +39,12 @@ admin:
     - 'move pdf_commentaries assets'
     - 'rename pdf_commentaries assets'
     - 'delete pdf_commentaries assets'
+    - 'view documents assets'
+    - 'upload documents assets'
+    - 'edit documents assets'
+    - 'move documents assets'
+    - 'rename documents assets'
+    - 'delete documents assets'
     - 'view users'
     - 'edit users'
     - 'create users'
